--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </nav>
 
           <ul id="Projects" class="projects">
-            <li class="first-page"><a href="https://planeswalker1.github.io/The-Great-Color-Guessing-Game">First Page</a></li>
-            <li class="color-game"><a href="https://planeswalker1.github.io/The-Basics">Color Game</a></li>
+            <li class="first-page"><a href="https://planeswalker1.github.io/The-Basics">First Page</a></li>
+            <li class="color-game"><a href="https://planeswalker1.github.io/The-Great-Color-Guessing-Game">Color Game</a></li>
             <li class="to-do-list"><a href="https://planeswalker1.github.io/to-do-list">To Do List</a></li>
           </ul>
 
