changed container class into an id

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="images/favicon.png">
   </head>
   <body>
-    <div id="target" class="container">
+    <div id="target container">
       <header>
         <h1>Daniel Munoz</h1>
       </header>
