--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </ul>
         </nav>
 
-          <ul id="Projects" class="projects">
+          <ul id="projects" class="projects">
             <li class="first-page"><a href="https://planeswalker1.github.io/The-Basics">First Page</a></li>
             <li class="color-game"><a href="https://planeswalker1.github.io/The-Great-Color-Guessing-Game">Color Game</a></li>
             <li class="to-do-list"><a href="https://planeswalker1.github.io/to-do-list">To Do List</a></li>
