moved 'target' id to body to fix back to top link

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="images/favicon.png">
   </head>
-  <body>
-    <div id="target container">
+  <body id="target">
+    <div id="container">
       <header>
         <h1>Daniel Munoz</h1>
       </header>
