--- a/new/index.html
+++ b/new/index.html
@@ -1,4 +1,24 @@
 ---
 layout: default
 ---
-<h1>Daniel Munoz</h1>
+
+<header class="home">
+  <nav>
+    <h1><a href="https://github.com/planeswalker1">Daniel Munoz</a></h1>
+
+    <ul id="nav" class="nav">
+      <li><a href="{{site.baseurl}}/">Projects</a></li>
+      <li><a href="{{site.baseurl}}/contact/">Contact</a></li>
+    </ul>
+
+    <!-- <p id="show" class="responsive-open show">MENU</p> -->
+  </nav>
+  <!-- <div id="responsive" class="responsive">
+    <p class="responsive-open">Close X</p>
+
+    <ul class="nav">
+      <li><a href="{{site.baseurl}}/">Projects</a></li>
+      <li><a href="{{site.baseurl}}/contact/">Contact</a></li>
+    </ul>
+  </div> -->
+</header>
