Change file name for for loop

--- a/new/index.html
+++ b/new/index.html
@@ -12,13 +12,13 @@ listTitle: Projects
 <main>
   <div class="list-container">
     <ul id= "list-1" class="projects">
-      {% for project in site.data.listData %}
+      {% for project in site.data.list-data %}
         <li class="{{project.class}}"><a href="{{project.source}}">{{project.title}}</a></li>
       {% endfor %}
     </ul>
 
     <ul id= "list-2" class="projects">
-      {% for project in site.data.listTwoData %}
+      {% for project in site.data.list-two-data %}
         <li class="{{project.class}}"><a href="{{project.source}}">{{project.title}}</a></li>
       {% endfor %}
       </ul>
