Add main section

--- a/contact.html
+++ b/contact.html
@@ -9,3 +9,12 @@ listTitle: Home
     <h2>Drop me an email at daniel.munozdev@gmail.com</h2>
   </div>
 </header>
+<main>
+  <h1>Skills</h1>
+
+  <ul id="skills" class="tools">
+    <li class="html">html5</li>
+    <li class="css">css</li>
+    <li class="javascript">javascript</li>
+  </ul>
+</main>
