update nav, css, and titles, compress images, and add sitemap.xml

--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,16 @@
 ---
 layout: default
-link: /contact.html
+title: Contact
 ---
 <header class="contact">
-  {% include nav.html%}
+  {% include nav.html %}
+  {% include responsive-nav.html %}
   <div class="intro">
     <h1>Get In Touch!</h1>
     <h2>Drop me an email at daniel.munozdev@gmail.com</h2>
   </div>
 </header>
+
 <main>
   <h1>Skills</h1>
 
