add meta tags, and update README

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@ layout: default
 title: Contact
 heading-2: Get In Touch!
 heading-3: Drop me an email at daniel.munozdev@gmail.com
+meta: Contact me if you want help with any projects.
 ---
 
 {% include header.html classname="header--contact" %}
