--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: Web Developer
 heading-1: I make Responsive Websites
+meta: Discover some cool respsonsive websites.
 ---
 
 {% include header.html classname="header--home" %}
