update: links grid items, web list styles, and contact info

--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,9 @@ meta: I usually reply within the day or the next. Feel free to reach out if you 
         I usually reply within the day or the next.
         Feel free to reach out if you need help with any projects!
     </p>
-
+    <p>Daniel Munoz</p>
     <ul>
-      <li> email: daniel.munozdev@gmail.com</li>
+      <li>email: daniel.munozdev@gmail.com</li>
+      <li>Timezone: Los Angeles, California / PST (UTC -8)</li>
     </ul>
 </div>
