--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@ meta: Hi my name is Daniel Munoz. I am a programmer from Long Beach, California 
   <p>
       My name is Daniel.
       I am currently developing projects with HTML, CSS, and JavaScript.
-      I upload most of my work on my 
+      I upload most of my work on my
       <a href="https://github.com/planeswalker1">github</a>.
       I like to make websites, and play League of Legends.
       Check out some of my recent <a href="{{ site.baseurl }}/portfolio">work</a> .
     </p>
 
   <h2>Skills</h2>
-  <ul>
-      <li>{% include svg/html5.svg %} HTML</li>
-      <li>{% include svg/css3.svg %} CSS</li>
-      <li>{% include svg/javascript.svg %} javaScript</li>
-      <li>{% include svg/jekyll.svg %} Jekyll</li>
-      <li>{% include svg/git.svg %} Git</li>
-      <li>{% include svg/github.svg %} Github</li>
+  <ul class="web">
+      <li class="web__list">{% include svg/html5.svg %} HTML</li>
+      <li class="web__list">{% include svg/css3.svg %} CSS</li>
+      <li class="web__list">{% include svg/javascript.svg %} javaScript</li>
+      <li class="web__list">{% include svg/jekyll.svg %} Jekyll</li>
+      <li class="web__list">{% include svg/git.svg %} Git</li>
+      <li class="web__list">{% include svg/github.svg %} Github</li>
   </ul>
 </div>
