--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@ meta: Hi my name is Daniel Munoz. I am a programmer from Long Beach, California 
 
   <h2>About Me</h2>
   <p>
-      My name is Daniel.
-      I am currently developing projects with HTML, CSS, and JavaScript.
-      I upload most of my work on my
-      <a href="https://github.com/planeswalker1">github</a>.
-      I like to make websites, and play League of Legends.
-      Check out some of my recent <a href="{{ site.baseurl }}/portfolio">work</a> .
-    </p>
-
+    My name is Daniel.
+    I am currently developing projects with HTML, CSS, and JavaScript.
+    Most of my work is uploaded on my
+    <a class="link" href="https://github.com/planeswalker1">github</a>.
+    I like to make websites, and play League of Legends.
+    Check out some of my recent <a class="link" href="{{ site.baseurl }}/portfolio">work</a>.
+  </p>
+  <div class="btn-container">
+    <a class="btn btn--light" href="{{ site.baseurl }}/Daniel-Munoz.pdf">Download Resume (PDF)</a>
+  </div>
   <h2>Skills</h2>
   <ul class="web">
       <li class="web__list">{% include svg/html5.svg %} HTML</li>
