update button styles and introduction

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@ meta: Hi my name is Daniel Munoz. I am a programmer from Long Beach, California 
     My name is Daniel.
     I am currently developing projects with HTML, CSS, and JavaScript.
     Most of my work is uploaded on my
-    <a class="link" href="https://github.com/planeswalker1">github</a>.
-    I like to make websites, and play League of Legends.
+    <a class="link" href="https://github.com/planeswalker1">Github</a>.
+    I upload <a class="link" href="{{ site.baseurl }}/blog">blogs</a> about all things web development on Wednesdays.
     Check out some of my recent <a class="link" href="{{ site.baseurl }}/portfolio">work</a>.
   </p>
   <div class="btn-container">
-    <a class="btn btn--light" href="{{ site.baseurl }}/Daniel-Munoz.pdf">Download Resume (PDF)</a>
+    <a class="btn" href="{{ site.baseurl }}/Daniel-Munoz.pdf">Download Resume (PDF)</a>
   </div>
   <h2>Skills</h2>
   <ul class="web">
