--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@ meta:  Discover some responsive websites.
               <p> {{ project.tech}}</p>
               <div class="item__flex">
                 <div>
-                  <a class="btn btn--light" href="{{ site.baseurl }}{{ project.url }}">View Project</a>
+                  <a class="btn btn--small" href="{{ site.baseurl }}{{ project.url }}">View Project</a>
                 </div>
                 <p>{{ project.time }}</p>
               </div>
