update blog links

--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@ meta: My blogs mostly related to web development
               <a class="link blog__a" href="{{ link.source }}">{{ link.header }}</a>
             </h2>
             <p class="blog__meta">
-              {{ link.meta }} <a class="link blog__a" href="{{ site.baseurl}}{{post.url}}">Read More</a>
+              {{ link.meta }} <a class="link blog__a" href="{{ link.source }}">Read More</a>
             </p>
             <p>{{ link.date }}</p>
           </div>
