update meta tags

--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 title: Blog · Daniel Munoz
-meta: My blogs mostly related to web development
+meta: Daniel Munoz blog which gives explanations of topics in HTML, CSS, JavaScript, and technology related to web development. Daniel Munoz, Front End Web Developer, Long Beach, California
+changefreq: weekly
 ---
 
 <div class="main__container main__container--blog">
