--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Contact · Daniel Munoz
-meta: I usually reply within the day or the next. Feel free to reach out if you need help with any projects!
+meta: Daniel Munoz about page which displays information about my contact information. I usually reply within the day or the next. Feel free to reach out if you need help with any projects! Daniel Munoz, Front End Web Developer, Long Beach, California
 ---
 
 <div class="main__container">
