--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 title: Daniel Munoz - Front End Web Developer - Long Beach, California
-meta: Hi my name is Daniel Munoz. I am a programmer from Long Beach, California that focuses in the Front-End of Web Development. I like to make websites with HTML, CSS and javaScript. My goal is to offer tailored online solutions.
+meta: Hi my name is Daniel Munoz. I am a programmer from Long Beach, California that focuses in the Front End of Web Development. I like to make websites with HTML, CSS and javaScript. My goal is to offer tailored online solutions.
+priority: 1
 ---
 
 <div class="main__container main__container--med">
