--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 layout: default
 title: Portfolio · Daniel Munoz
 main-class: main--portfolio
-meta:  Discover some responsive websites.
+meta: Daniel Munoz portfolio page which displays information about my recent projects made with HTML, CSS, and JavaScript. Daniel Munoz, Front End Web Developer, Long Beach, California
 ---
 
 <div class="main__container">
