--- a/404.html
+++ b/404.html
@@ -1,13 +1,15 @@
---- 
+---
 layout: default
 permalink: /404.html
 title: Not Found · Daniel Munoz
 main-class: main--404
+meta: Hi my name is Daniel Munoz. I am a programmer from Long Beach, California that focuses in the Front End of Web
+Development. I like to make websites with HTML, CSS and javaScript. My goal is to offer tailored online solutions.
 ---
 
 <div class="main__container main__container--med">
   <h1 class="container__heading">404</h1>
-  
+
   <p>
     <strong>Page not found :(</strong>
   </p>
