--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@ changefreq: weekly
         <li class="list__blog">
           <div>
             <a href="{{ link.source }}">
-              <img class="link img--post" src="{{ site.baseurl }}/images/{{ link.imgSrc }}" alt="Photo of {{ link.imgAlt }}" class="img--post">
+              <img class="link img--post {{ link.class }}" src="{{ site.baseurl }}/images/{{ link.imgSrc }}" alt="Photo of {{ link.imgAlt }}" class="img--post">
             </a>
           </div>
           <div>
