--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ priority: 1
     Check out some of my recent <a class="link" href="{{ site.baseurl }}/portfolio">work</a>.
   </p>
   <div class="btn-container">
-    <a class="btn" href="{{ site.baseurl }}/Daniel-Munoz.pdf">Download Resume (PDF)</a>
+    <a class="btn" href="{{ site.baseurl }}/Daniel-Munoz-resume.pdf">Download Resume (PDF)</a>
   </div>
   <h2>Skills</h2>
   <ul class="web">
