update home page

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@ priority: 1
     I am currently developing projects with HTML, CSS, and JavaScript.
     Most of my work is uploaded on my
     <a class="link" href="https://github.com/planeswalker1">Github</a>.
-    I upload <a class="link" href="{{ site.baseurl }}/blog">blogs</a> about all things web development on Wednesdays.
-    Check out some of my recent <a class="link" href="{{ site.baseurl }}/portfolio">work</a>.
+    I upload <a class="link" href="{{ site.baseurl }}/blog">blogs</a> about all things web development.
   </p>
   <div class="btn-container">
     <a class="btn" href="{{ site.baseurl }}/daniel-munoz-resume.pdf">Download Resume (PDF)</a>
